cc.creativecomputing/log/noname-2011-05-20_10-49-43.txt
[Fri May 20 10:49:43 CEST 2011] [CCLog Line:177:initialize] [INFO] logging to file: log/noname-2011-05-20_10-49-43.txt
[Fri May 20 10:49:43 CEST 2011] [CCApp:display] [SEVERE] com.jogamp.opencl.CLException$CLBuildProgramFailureException: 
CLDevice [id: 16918016 name: GeForce 8600M GT type: GPU profile: FULL_PROFILE] build log:
<program source>:57:30: error: unexpected type name '__float2': expected expression
         float2 i1 = (x0.x > x0.y) ? float2(1.0, 0.0) : float2(0.0, 1.0);
                                     ^
/System/Library/Frameworks/OpenCL.framework/Resources/cl_kernel.h:170:18: note: instantiated from:
 #define float2                  __float2
                                 ^
<program source>:63:39: error: unexpected type name '__float4': expected expression
         float4 p = permute( permute( i.y + float4(0.0, i1.y, 1.0,0 )) + i.x + float4(0.0, i1.x, 1.0, 0));
                                            ^
/System/Library/Frameworks/OpenCL.framework/Resources/cl_kernel.h:172:18: note: instantiated from:
 #define float4                  __float4
                                 ^
<program source>:65:88: error: too many arguments provided to function-like macro invocation
         float4 m = max(0.5 - float4(dot(x0,x0), dot(x12.xy,x12.xy), dot(x12.zw,x12.zw)), 0.0, 0.0);
                                                                                               ^
<program source>:65:13:{65:13-65:16}: error: incompatible type initializing 'double (double, double)', expected '__float4'
         float4 m = max(0.5 - float4(dot(x0,x0), dot(x12.xy,x12.xy), dot(x12.zw,x12.zw)), 0.0, 0.0);
                    ^~~
<program source>:72:35: error: too few arguments provided to function-like macro invocation
         float4 x = 2.0 * fract(p * C.wwww) - 1.0;
                                          ^
<program source>:72:17:{72:13-72:16}{72:19-72:24}: error: invalid operands to binary expression ('double' and 'double (*)(double, double *)')
         float4 x = 2.0 * fract(p * C.wwww) - 1.0;
                    ~~~ ^ ~~~~~
CLDevice [id: 16909312 name: Intel(R) Core(TM)2 Duo CPU     T8300  @ 2.40GHz type: CPU profile: FULL_PROFILE] build log:
<program source>:57:30: error: unexpected type name '__float2': expected expression
         float2 i1 = (x0.x > x0.y) ? float2(1.0, 0.0) : float2(0.0, 1.0);
                                     ^
/System/Library/Frameworks/OpenCL.framework/Resources/cl_kernel.h:170:18: note: instantiated from:
 #define float2                  __float2
                                 ^
<program source>:63:39: error: unexpected type name '__float4': expected expression
         float4 p = permute( permute( i.y + float4(0.0, i1.y, 1.0,0 )) + i.x + float4(0.0, i1.x, 1.0, 0));
                                            ^
/System/Library/Frameworks/OpenCL.framework/Resources/cl_kernel.h:172:18: note: instantiated from:
 #define float4                  __float4
                                 ^
<program source>:65:88: error: too many arguments provided to function-like macro invocation
         float4 m = max(0.5 - float4(dot(x0,x0), dot(x12.xy,x12.xy), dot(x12.zw,x12.zw)), 0.0, 0.0);
                                                                                               ^
<program source>:65:13:{65:13-65:16}: error: incompatible type initializing 'double (double, double)', expected '__float4'
         float4 m = max(0.5 - float4(dot(x0,x0), dot(x12.xy,x12.xy), dot(x12.zw,x12.zw)), 0.0, 0.0);
                    ^~~
<program source>:72:35: error: too few arguments provided to function-like macro invocation
         float4 x = 2.0 * fract(p * C.wwww) - 1.0;
                                          ^
<program source>:72:17:{72:13-72:16}{72:19-72:24}: error: invalid operands to binary expression ('double' and 'double (*)(double, double *)')
         float4 x = 2.0 * fract(p * C.wwww) - 1.0;
                    ~~~ ^ ~~~~~ [error: CL_BUILD_PROGRAM_FAILURE]
	at com.jogamp.opencl.CLException.newException(CLException.java:78)
	at com.jogamp.opencl.CLProgram.build(CLProgram.java:381)
	at com.jogamp.opencl.CLProgram.build(CLProgram.java:262)
	at cc.creativecomputing.opencl.demos.CCCLSimplexNoiseDemo.setup(CCCLSimplexNoiseDemo.java:90)
	at cc.creativecomputing.CCApp.display(CCApp.java:562)
	at jogamp.opengl.GLDrawableHelper.display(GLDrawableHelper.java:191)
	at javax.media.opengl.awt.GLCanvas$DisplayAction.run(GLCanvas.java:873)
	at jogamp.opengl.GLDrawableHelper.invokeGL(GLDrawableHelper.java:363)
	at javax.media.opengl.awt.GLCanvas.maybeDoSingleThreadedWorkaround(GLCanvas.java:769)
	at javax.media.opengl.awt.GLCanvas.display(GLCanvas.java:388)
	at javax.media.opengl.awt.GLCanvas.paint(GLCanvas.java:487)
	at sun.awt.RepaintArea.paintComponent(RepaintArea.java:276)
	at sun.awt.RepaintArea.paint(RepaintArea.java:241)
	at apple.awt.ComponentModel.handleEvent(ComponentModel.java:263)
	at java.awt.Component.dispatchEventImpl(Component.java:4790)
	at java.awt.Component.dispatchEvent(Component.java:4544)
	at java.awt.EventQueue.dispatchEvent(EventQueue.java:635)
	at java.awt.EventDispatchThread.pumpOneEventForFilters(EventDispatchThread.java:296)
	at java.awt.EventDispatchThread.pumpEventsForFilter(EventDispatchThread.java:211)
	at java.awt.EventDispatchThread.pumpEventsForHierarchy(EventDispatchThread.java:201)
	at java.awt.EventDispatchThread.pumpEvents(EventDispatchThread.java:196)
	at java.awt.EventDispatchThread.pumpEvents(EventDispatchThread.java:188)
	at java.awt.EventDispatchThread.run(EventDispatchThread.java:122)

